--- a/assets/package.json
+++ b/assets/package.json
@@ -10,7 +10,8 @@
     "jquery": "^3.2.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "popper.js": "^1.12.5"
+    "popper.js": "^1.12.5",
+    "handlebars": "4.0.10"
   },
   "devDependencies": {
     "babel-brunch": "6.1.1",
